# load81-picocalc

./: .gitmodules  CMakeLists.txt  DEBUGGING.md  LICENSE.md  README.md  SD_CARD_FIX.md  SD_CARD_ISSUE.md  increment_build.sh  test_9p_full.sh  test_9p_protocol.sh  test_9p_session.py  test_9p_session.sh
doc/: 9P_BUILD15_DEBUG_LOGGING.md  9P_BUILD_SUCCESS.md  9P_BUILD_SUMMARY.md  9P_CONNECTION_CLOSE_BUG.md  9P_DEBUGGING_GUIDE.md  9P_DEBUGGING_PROTOCOL.md  9P_DEBUG_LOGGING_REMOVED.md  9P_DIAGNOSTIC_SERVER_TESTING.md  9P_DOUBLE_HEADER_READ_BUG.md  9P_IMPLEMENTATION_COMPLETE.md  9P_IMPLEMENTATION_GUIDE.md  9P_IMPLEMENTATION_STATUS.md  9P_INTERRUPT_CONTEXT_BUG.md  9P_LWIP_POLLING_FIX.md  9P_MESSAGE_API_BUG.md  9P_MESSAGE_HEADER_BUG.md  9P_MISSING_RETURN_BUG.md  9P_NETWORK_DIAGNOSTICS.md  9P_PROJECT_SUMMARY.md  9P_PROTOCOL_ERROR_FIX.md  9P_RESPONSE_TYPE_CORRUPTION_BUG.md  9P_SERVER_ARCHITECTURE.md  9P_SLEEP_BLOCKING_BUG.md  9P_USER_GUIDE.md  BOOT_CONFIG.md  BUILD32_LARGE_FILE_FIX.md  BUILD34_SINGLE_OPEN_FIX.md  BUILD35_DETAILED_ERROR.md  BUILD38_DEBUG_OUTPUT.md  BUILD39_PORT_CONFLICT_FIX.md  BUILD39_SUMMARY.md  BUILD47_SCREENSHOT_FEATURE.md  BUILD48_EDITOR_FILESERVER_FIX.md  FLASH_BUILD39.md  LOAD81R_FIXES.md  LOAD81R_TESTING.md  NEX_BROWSER.md  WIFI_CLIENT_ISOLATION.md  WIFI_DEBUG_BUILD30.md
load81/: flames.lua  journal.lua  keynames.lua  lines.lua  nex.lua  program1.lua  start.lua
plans/: load81r_architecture.md  load81r_implementation_plan.md
src/: build_version.h  debug.h  lwipopts.h  main.c  mbedtls_config.h  picocalc_9p.c  picocalc_9p.h  picocalc_9p_core1.c  picocalc_9p_fs.c  picocalc_9p_handlers.c  picocalc_9p_proto.c  picocalc_9p_proto.h  picocalc_debug_log.c  picocalc_debug_log.h  picocalc_diag_server.c  picocalc_diag_server.h  picocalc_editor.c  picocalc_editor.h  picocalc_fat32_sync.c  picocalc_fat32_sync.h  picocalc_file_server.c  picocalc_file_server.h  picocalc_framebuffer.c  picocalc_framebuffer.h  picocalc_fs_handler.c  picocalc_fs_handler.h  picocalc_graphics.c  picocalc_graphics.h  picocalc_keyboard.c  picocalc_keyboard.h  picocalc_lua.c  picocalc_lua.h  picocalc_mdns.c  picocalc_mdns.h  picocalc_menu.c  picocalc_menu.h  picocalc_nex.c  picocalc_nex.h  picocalc_repl.c  picocalc_repl.h  (+5 more)
tests/: test_nex_protocol  test_nex_protocol.c
tools/: get_debug_log.sh  test_debug_system.sh
tools/load81r/: README.md  client.py  commands.py  load81r.py  shell.py
